# talking-bird

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  dependencies.py  documents.py  query.py
backend/app/core/: __init__.py  database.py  security.py  vector_store.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  answer_generator.py  document_processor.py  embeddings.py  grounding_validator.py  query_expander.py  reranker.py  retrieval.py
backend/app/utils/: __init__.py  exceptions.py  logging.py
backend/scripts/: create_admin.py
backend/tests/fixtures/: .gitkeep
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
frontend/: .eslintrc.json  Dockerfile  env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/__tests__/: .gitkeep
frontend/public/: .gitkeep
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/query/: page.tsx
frontend/src/components/: AnswerDisplay.tsx  ChatInterface.tsx  DocumentUpload.tsx  DownloadModal.tsx  QueryInterface.tsx  SourceCitation.tsx
frontend/src/hooks/: useQuery.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
